--- a/About.html
+++ b/About.html
@@ -23,7 +23,7 @@
     <nav class="navbar" id="nav" role="navigation" aria-label="main navigation">
       <div class="container">
         <div class="navbar-brand">
-          <a class="navbar-item" id="logo" href="main.html">
+          <a class="navbar-item" id="logo" href="index.html">
               SR  
           </a>
           <span class="navbar-burger burger" aria-hidden="true" data-target="navMenu">
@@ -34,7 +34,7 @@
         </div>
         <div id="navMenu" class="navbar-menu">
           <div class="navbar-end">
-            <a class="navbar-item " href="main.html">Case Studies</a>
+            <a class="navbar-item " href="index.html">Case Studies</a>
             <a class="navbar-item " href="About.html">About Me</a>
             <a class="navbar-item " href="Assets/Resume.pdf" target="_blank" download="Sreemukhi_Resume.pdf">Resume</a>
           </div>
